# website-face

./: *scratch*  .envrc  .gitignore  .travis.yml  Makefile  README.md  \  about.rst  cabal.project.freeze  contact.markdown  flake.nix  index.html  internet.cabal  package.yaml  site.hs  stack.yaml  test-site.cabal
.travis/: install-nvm.sh  install_nvm.sh
App/: Main.hs
code/: Alternative.hs  Applicative.hs  Comonad.hs  Contravariant.hs  DoNotation.hs  Foldable.hs  Functor.hs  LensFace.hs  Lenses.hs  Monoid.hs  Newtypes.hs  Semigroup.hs  State.hs  Traversal.hs  Validation.hs  Write.hs
css/: default.css  firacode.css
dist-newstyle/cache/: compiler  config
drafts/: 2018-10-22-monoid-mate.markdown  2018-10-23-nonempty.markdown  2018-10-23-semigroup, semipoint.markdown  2018-10-30-do-notation.markdown  2018-11-01-more-monoids.markdown  2018-11-11-strange-semigroups.markdown  2018-11-11-typeclasses-applicative.markdown  2018-11-11-typeclasses-functor.markdown  2018-11-11-typeclasses-monad.markdown  2018-11-11-typeclasses-semigroup.markdown  2018-11-13-writer-monad.markdown  2018-11-17-functor-applicative-monad.markdown  2018-11-18-contravariant.markdown  2018-11-25-typeclasses-folable.markdown  2018-11-25-typeclasses-foldable.markdown  2018-11-26-why-the-new-types.markdown  2018-12-01-data-structures-map.markdown  2018-12-01-data-structures-sequence.markdown  2018-12-01-data-structures-set.markdown  2018-12-18-optics-pt-2-prism.markdown  2018-12-30-polymorphism.markdown  2019-01-03-typeclasses-monoid.markdown  2019-01-20-testing-io.markdown  2019-02-11-datatypes-maybe.markdown  getting-started.markdown
haskell/src/: Arrow.hs  Comonad.hs  Either.hs  Form.hs  Free.hs  Maybe.hs  Monad.hs  Nonempty.hs  Profunctor.hs  Reader.hs  Stringtime.hs  Testing.hs
haskell/test/: ArrowSpec.hs  ComonadSpec.hs  EitherSpec.hs  FreeSpec.hs  MaybeSpec.hs  MonadSpec.hs  ProfunctorSpec.hs  ReaderSpec.hs  TestingSpec.hs
posts/: 2018-10-21-total-eclipse-of-the-heart.markdown  2018-10-21-total-functions.markdown  2018-10-21-total-repo.markdown  2018-10-22-monoid-mate.markdown  2018-10-23-semigroup, semipoint.markdown  2018-10-30-do-notation.markdown  2018-10-30-learning-lens.markdown  2018-10-30-optics-pt-1-lens.markdown  2018-11-03-typeclasses-eq.markdown  2018-11-03-typeclasses-ord.markdown  2018-11-11-typeclasses-show.markdown  2018-11-16-typeclasses-functor.markdown  2018-11-17-typeclasses-applicative.markdown  2018-11-17-typeclasses-contravariant.markdown  2018-12-03-typeclasses-foldable.markdown  2018-12-18-optics-pt-2-prism.markdown  2018-12-19-new-types.markdown  2018-12-22-typeclasses-traversable.markdown  2018-12-26-getting-started-pt-1.markdown  2019-01-03-typeclasses-semigroup.markdown  2019-01-04-typeclasses-monoid.markdown  2019-01-05-what-is-a-typeclass.markdown  2019-01-06-typeclasses-alternative.markdown  2019-01-13-typeclasses-bifunctor.markdown  2019-01-21-polymorphism.markdown  2019-01-27-testing-io.markdown  2019-01-28-effect-and-aff.markdown  2019-02-11-datatypes-maybe.markdown  2019-02-17-datatypes-maybe.markdown  2019-02-17-purescript-semigroups.markdown  2019-02-27-typeclasses-profunctor.markdown  2019-03-12-typeclasses-profunctor.markdown  2019-03-15-datatypes-either.markdown  2019-03-18-typeclasses-monad.markdown  2019-03-31-purescript-aff.markdown  2019-07-05-refined-types.markdown  2019-07-14-data-migrations.markdown  2019-08-12-contract-testing.markdown  2019-09-07-free-like-pizza.markdown  2019-10-09-the-genius-of-concrete.markdown  (+21 more)
purescript/: package.json  psc-package.json
purescript/src/: CoordSemigroup.purs  EffectAndAff.purs
purescript/test/: EffectAndAff.purs  Main.purs
templates/: archive.html  default.html  post.html
tests/: AlternativeSpec.hs  ApplicativeSpec.hs  ComonadSpec.hs  ContravariantSpec.hs  DoSpec.hs  FoldableSpec.hs  FormSpec.hs  LensesSpec.hs  MonoidSpec.hs  NewtypesSpec.hs  SemigroupSpec.hs  TestingSpec.hs  TraversalSpec.hs
