name:               test-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , mtl
  ghc-options:      -threaded
  default-language: Haskell2010

library
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Functor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Write
                  , State
                  , Contravariant
                  , Comonad
                  , Traversal
                  , Validation
  hs-source-dirs:   code
  build-depends:    base == 4.*
                  , lens
                  , free
                  , mtl
                  , ilist
                  , bifunctors
                  , comonad
                  , validation
                  , contravariant
  default-language: Haskell2010

test-suite unit-tests
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: tests, code
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Functor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Write
                  , State
                  , Contravariant
                  , Comonad
                  , Validation
                  , ApplicativeSpec
                  , ComonadSpec
                  , ContravariantSpec
                  , DoSpec
                  , FoldableSpec
                  , FormSpec
                  , FunctorSpec
                  , LensesSpec
                  , MonoidSpec
                  , NewtypesSpec
                  , SemigroupSpec
                  , StateSpec
                  , ValidationSpec
                  , WriteSpec
                  , Traversal
                  , TraversalSpec
  build-depends: base
                , mtl
                , ilist
                , lens
                , free
                , bifunctors
                , comonad
                , contravariant
                , validation
                , hspec
                , QuickCheck
                , hspec-discover
