name:               test-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , mtl
  ghc-options:      -threaded
  default-language: Haskell2010

library
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Functor
                  , Bifunctor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , Alternative
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Write
                  , State
                  , Nonempty
                  , Contravariant
                  , Stringtime
                  , Comonad
                  , Traversal
                  , Maybe
                  , Validation
  hs-source-dirs:   haskell/src
  build-depends:    base == 4.*
                  , lens
                  , free
                  , mtl
                  , ilist
                  , bifunctors
                  , profunctors
                  , comonad
                  , text
                  , validation
                  , containers
                  , hashable
                  , contravariant
                  , time
                  , transformers
  default-language: Haskell2010

test-suite unit-tests
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: haskell/test, haskell/src
  other-modules:  Lenses
                  , Eq
                  , Ord
                  , Show
                  , Functor
                  , Bifunctor
                  , Monoid
                  , Semigroup
                  , TotalEclipse
                  , Newtypes
                  , Applicative
                  , Alternative
                  , DoNotation
                  , Foldable
                  , Form
                  , Free
                  , Write
                  , State
                  , Nonempty
                  , Contravariant
                  , Comonad
                  , Validation
                  , Testing
                  , Maybe
                  , MaybeSpec
                  , ApplicativeSpec
                  , AlternativeSpec
                  , ComonadSpec
                  , ContravariantSpec
                  , DoSpec
                  , FoldableSpec
                  , FormSpec
                  , FunctorSpec
                  , BifunctorSpec
                  , LensesSpec
                  , MonoidSpec
                  , NewtypesSpec
                  , SemigroupSpec
                  , StateSpec
                  , ValidationSpec
                  , WriteSpec
                  , NonemptySpec
                  , Traversal
                  , TraversalSpec
                  , TestingSpec
  build-depends: base
                , mtl
                , ilist
                , lens
                , free
                , bifunctors
                , profunctors
                , comonad
                , contravariant
                , validation
                , containers
                , time
                , transformers
                , hspec
                , QuickCheck
                , hspec-discover
