name:               test-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.24

executable site
  main-is:          site.hs
  build-depends:    base >= 4.10
                  , hakyll == 4.12.*
                  , mtl
  ghc-options:      -threaded
  default-language: Haskell2010
